--- a/assets/matt.css
+++ b/assets/matt.css
@@ -265,7 +265,7 @@ header {
 /* changed this from the tutorial video to
    allow it to gain focus, making it tabbable */
 .nav-toggle {
-  position: absolute !important;
+  position: fixed !important;
   top: -9999px !important;
   left: -9999px !important;
 }
