--- a/assets/matt.css
+++ b/assets/matt.css
@@ -14,7 +14,7 @@ body {
 .logo {
     font-family: SEGA LOGO FONT;
     font-weight: 100;
-    font-size: 2.5em;
+    font-size: 2em;
 }
 
 button {
@@ -50,7 +50,7 @@ img {
 .hero {
   grid-area: hero;
   min-height: 400px;
-  min-width: 375px;
+  min-width: 350px;
   background: white url(images/49A3106.jpg);
   background-size: cover;
   background-position: top center;
@@ -58,12 +58,13 @@ img {
   display: flex;
   flex-direction: column;
   align-items: start;
-  justify-content: start;
+  justify-content: center;
 }
 
 .hero > * {
   background: var(--yellow);
   padding: 5px;
+  transform: rotate(-15deg);
 }
 
 .cta {
@@ -265,7 +266,7 @@ header {
 /* changed this from the tutorial video to
    allow it to gain focus, making it tabbable */
 .nav-toggle {
-  position: fixed !important;
+  position: absolute !important;
   top: -9999px !important;
   left: -9999px !important;
 }
@@ -290,7 +291,7 @@ header {
   display: block;
   background: white;
   height: 2px;
-  width: 2em;
+  width: 1.5em;
   border-radius: 2px;
   position: relative;
 }
@@ -367,6 +368,7 @@ nav a:hover {
   
   .logo {
     grid-column: 2 / 3;
+    font-size: 2.5em;
   }
   
   nav {
