--- a/assets/matt.css
+++ b/assets/matt.css
@@ -287,7 +287,7 @@ allow it to gain focus, making it tabbable */
 .nav-toggle-label span,
 .nav-toggle-label span::before,
 .nav-toggle-label span::after {
-  display: block;
+  display: inline-flex;
   background: white;
   height: 2px;
   width: 1.5em;
@@ -320,11 +320,6 @@ nav {
   transform-origin: top;
   transition: transform 400ms ease-in-out;
 }
-@media only screen 
-  and (device-width: 375px)
-  and (device-height: 812px) 
-  and (:-webkit-device-pixel-ratio: )
-  and (orientation: portrait) {
 
 nav ul {
   margin: 0;
@@ -358,7 +353,7 @@ nav a:hover {
   opacity: 1;
   transition: opacity 250ms ease-in-out 250ms;
 }
-}
+
 @media screen and (min-width: 800px) {
   .nav-toggle-label {
     display: none;
