--- a/assets/matt.css
+++ b/assets/matt.css
@@ -258,7 +258,7 @@ header {
   /* margin-bottom: 10px; */
   padding-top: 10px;
   padding-bottom: 10px;
-  position: sticky;
+  position: fixed;
   top: 0px;
   /* overflow: hidden; */
 }
