--- a/assets/matt.css
+++ b/assets/matt.css
@@ -38,7 +38,7 @@ img {
 .top {
   display: grid;
   grid-gap: 20px;
-  /* margin-top: 70px; */
+  margin-top: 70px;
   grid-template-areas:
     "hero hero cta1"
   /*  "hero hero hero"
@@ -59,6 +59,7 @@ img {
   flex-direction: column;
   align-items: start;
   justify-content: center;
+
 }
 
 .hero > * {
@@ -259,6 +260,7 @@ header {
   padding-top: 10px;
   padding-bottom: 10px;
   position: fixed;
+  left: 0;
   top: 0px;
   /* overflow: hidden; */
 }
