--- a/assets/matt.css
+++ b/assets/matt.css
@@ -167,17 +167,22 @@ img {
 
 /* Gallery! */
 
-/* .gallery {
+.gallery {
   display: grid;
   grid-gap: 20px;
-  grid-template-columns: repeat(auto-fit, minmax(200px, 1fr));
+  grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
+  grid-rows: 400px;
+  /* overflow: hidden; */
+  /* max-width: 300px; */
 }
 
 .gallery img {
-  width: 100%;
+  /* width: 100%; */
+  /* max-height: 400px; */
 }
 
 .gallery h2 {
+  margin-top: 70px;
   grid-column: 1 / -1;
   display: grid;
   grid-template-columns: 1fr auto 1fr;
@@ -194,7 +199,7 @@ img {
 
 .gallery h2:after {
   --direction: right;
-} */
+}
 
 /* @media (max-width: 1000px) {
   .menu {
@@ -415,3 +420,112 @@ nav a:hover {
     transform: scale(1,1);
   }
 }
+/* gallery */
+
+/* .close {
+  background: none;
+  color: black;
+  border: 0;
+}
+
+.gallery {
+  margin-top: 70px;
+  display: grid;
+  grid-gap: 5px;
+  grid-template-columns: repeat(auto-fill, 100px);
+  grid-auto-rows: 100px;
+  grid-auto-flow: dense;
+}
+
+.item {
+  overflow: hidden;
+  display: grid;
+  grid-template-columns: 1;
+  grid-template-rows: 1;
+}
+
+.item img {
+  grid-column: 1 / -1;
+  grid-row: 1 / -1;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.item__overlay {
+  background: #ffc60032;
+  grid-column: 1 / -1;
+  grid-row: 1 / -1;
+  position: relative;
+  display: grid;
+  justify-items: center;
+  align-items: center;
+  transition: 0.2s;
+  transform: translateY(100%);
+}
+
+.item__overlay button {
+  background: none;
+  border: 2px solid white;
+  color: white;
+  text-transform: uppercase;
+  background: rgba(0, 0, 0, 0.7);
+  padding: 5px;
+}
+
+.item:hover .item__overlay {
+  transform: translateY(0);
+}
+
+
+.item.v2 {
+  grid-row: span 2;
+}
+
+.item.v3 {
+  grid-row: span 3;
+}
+
+.item.v4 {
+  grid-row: span 4;
+}
+
+.item.h2 {
+  grid-column: span 2;
+}
+
+.item.h3 {
+  grid-column: span 3;
+}
+
+.item.h4 {
+  grid-column: span 4;
+}
+
+
+.overlay {
+  position: fixed;
+  background: rgba(0, 0, 0, 0.7);
+  top: 0;
+  right: 0;
+  bottom: 0;
+  left: 0;
+  display: none;
+  z-index: 2;
+}
+
+.overlay.open {
+  display: grid;
+  align-items: center;
+  justify-items: center;
+}
+
+.overlay-inner {
+  background: white;
+  width: 700px;
+  padding: 20px;
+}
+
+.overlay img {
+  width: 100%;
+} */
