--- a/assets/matt.css
+++ b/assets/matt.css
@@ -43,6 +43,7 @@ img {
   display: grid;
   grid-gap: 20px;
   margin-top: 70px;
+  grid-template-rows: minmax(500px, 1fr);
   grid-template-areas:
     "hero hero cta1"
   /*  "hero hero hero"
@@ -53,7 +54,7 @@ img {
 
 .hero {
   grid-area: hero;
-  min-height: 400px;
+  /* min-height: 400px; */
   min-width: 300px;
   background: white url(images/49A3106.jpg);
   background-size: cover;
@@ -63,6 +64,7 @@ img {
   flex-direction: column;
   align-items: start;
   justify-content: center;
+
 
 }
 
